--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <div>
         <button class="btn btn-1">Kliknięto mnie</button>
         <button class="btn btn-2">Najechano na mnie</button>
-        <button class="btn btn-2">double click</button>
+        <button class="btn btn-3">double click</button>
     </div>
 
 
