--- a/index.html
+++ b/index.html
@@ -9,13 +9,29 @@
 </head>
 <body>
 
-    <h1>DOM</h1>
+    <nav>
+        <button class="burger">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-times hide"></i>
+        </button>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Produkty</a></li>
+            <li><a href="#">Cennik</a></li>
+            <li><a href="#">Kontakt</a></li>
+        </ul>
+    </nav>
+
+
+
+
+    <!-- <h1>DOM</h1>
 
     <div>
         <button class="btn btn-1">Kliknięto mnie</button>
         <button class="btn btn-2">Najechano na mnie</button>
         <button class="btn btn-3">double click</button>
-    </div>
+    </div> -->
 
 
     <script src="script.js"></script>
