--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <script src="https://kit.fontawesome.com/83ffc92110.js" crossorigin="anonymous"></script>
-    
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Document</title>
 
@@ -25,6 +25,10 @@
             <li><a href="#">Kontakt</a></li>
         </ul>
     </nav>
+
+    <footer>
+        <p> &copy; Zbigniew Kulczyński</p>
+    </footer>
 
 
 
